--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     tools:context="com.rais.haidar.jakartatravelguide.detailActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"
+        android:layout_margin="10dp"
+        android:id="@+id/detailGambar"
+        />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
