--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,37 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     app:cardBackgroundColor="@color/colorPrimary"
     android:layout_marginTop="10dp"
+    android:layout_margin="10dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="247dp"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:id="@+id/txtNamaWisata"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="1"
-            android:layout_marginTop="10dp"
-            android:text="NAMA TEMPAT WISATA"
-            android:textSize="20sp" />
+        android:orientation="vertical">
 
         <ImageView
-            android:layout_width="10dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_arrow_forward_black_24dp" />
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher"
+            android:scaleType="centerCrop"
+            android:paddingTop="10dp"
+            android:id="@+id/detailGambarlist"
+            />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="247dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:id="@+id/txtNamaWisata"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
+                android:text="NAMA TEMPAT WISATA"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_section_expand_contract" />
+
+        </LinearLayout>
     </LinearLayout>
+
+
+
+
 
 
 </android.support.v7.widget.CardView>
